replaced internal JDK class with official API class.